name:                pure-cond
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-cond
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    containers,
    pure-default >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    pure-try >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    unordered-containers,
    vector

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Cond

  default-language: Haskell2010