name:                pure-cond
version:             0.8.0.0
homepage:            purehs.org/doc/pure-cond
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-cond.git

library
  build-depends:
    base,
    containers,
    pure-core,
    pure-default,
    pure-json,
    pure-lifted,
    pure-try,
    pure-txt,
    unordered-containers,
    vector

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Cond

  default-language: Haskell2010
